[package]
name = "bitcoin-script-functions"
version = "0.1.0"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]

[dependencies]
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch="bitvmx" }
bitcoin = "0.32.1"