[package]
name = "bitcoin-script-functions"
version = "0.1.0"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]

[dependencies]
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack", branch = "v2" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "bitvmx" }
bitcoin = "=0.32.1"

[dev-dependencies]
sha2 = "0.10.8"
hex = "0.4.3"
